@@ -39,5 +39,6 @@
   "zenburn": 1.6,
   "gruvbox-dark": 4.0,
   "gruvbox-light": 3.2,
-  "dracula": 1.4
+  "dracula": 1.4,
+  "one-dark": 3.7
 }
